edit: fixed overlap buttons

--- a/node_app/client/public/css/background.css
+++ b/node_app/client/public/css/background.css
@@ -8,7 +8,7 @@
     margin: 0;
   }
   .widget-container {
-    width: 150%;
+    width: 100%;
     height: 30%;
     position: absolute;
     top: 0px;
